--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "@angular/common": "~11.2.11",
     "@angular/compiler": "~11.2.11",
     "@angular/core": "~11.2.11",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.11",
+    "@angular/localize": "~11.2.11",
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "bootstrap": "^4.5.0",
+    "firebase": "^8.6.1",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
